# GITHUB-MCP-TICKET-AGENT-LIBRARY

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ticketwatcher.yml
.ticketwatcher/: trigger.txt
docs/: ticketwatcher_review.md
fixtures/: sample_issue_event.json
scripts/: bootstrap_ticketwatcher.sh  live_test.py  run_tests.py
src/: server.py
src/app/: auth.py  payments.py  user_repo.py
src/app/utils/: __init__.py  string.py  stringy.py
src/ticketwatcher/: agent_llm.py  cli.py  config.py  diff_utils.py  github_api.py  handlers.py  paths.py  snippets.py  stackparse.py
test/: confest.py  live_integration_test.py  test_allowed_paths.py  test_auth_trims.py  test_auth_user.py  test_missing_files_handling.py  test_paths_allowed.py  test_payments_default_tax.py  test_ticketwatcher_handlers_import.py  test_user_repo_safe_shape.py  test_utils_sanitize.py
ticketwatcher-worker/: .gitignore  bootstrap_worker.sh  package-lock.json  package.json  wrangler.jsonc  wrangler.toml
ticketwatcher-worker/src/: index.js
